--- a/src/Common/gui/NinjamPanel.ui
+++ b/src/Common/gui/NinjamPanel.ui
@@ -7,14 +7,8 @@
     <x>0</x>
     <y>0</y>
     <width>841</width>
-    <height>247</height>
+    <height>282</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string notr="true"/>
@@ -319,7 +313,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Preferred</enum>
+      <enum>QSizePolicy::MinimumExpanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -329,53 +323,47 @@
      </property>
     </spacer>
    </item>
-   <item>
+   <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
     <widget class="QWidget" name="ninjamControlsPanel" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-       <horstretch>0</horstretch>
-       <verstretch>1</verstretch>
-      </sizepolicy>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0">
+      <property name="spacing">
+       <number>6</number>
+      </property>
       <property name="leftMargin">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="bottomMargin">
-       <number>0</number>
+       <number>6</number>
       </property>
-      <item>
+      <item alignment="Qt::AlignLeft|Qt::AlignVCenter">
        <widget class="QWidget" name="panelCombos" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
          <property name="leftMargin">
-          <number>6</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>6</number>
+          <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <property name="horizontalSpacing">
-          <number>3</number>
-         </property>
-         <property name="verticalSpacing">
-          <number>0</number>
+         <property name="spacing">
+          <number>6</number>
          </property>
          <item row="3" column="1">
           <widget class="QComboBox" name="comboShape">
@@ -387,7 +375,7 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="0">
+         <item row="3" column="0" alignment="Qt::AlignRight">
           <widget class="QLabel" name="labelShape">
            <property name="text">
             <string>Shape</string>
@@ -404,7 +392,7 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="1" column="0" alignment="Qt::AlignRight">
           <widget class="QLabel" name="labelBPM">
            <property name="toolTip">
             <string>Beats per minute</string>
@@ -414,7 +402,7 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="0">
+         <item row="0" column="0" alignment="Qt::AlignRight">
           <widget class="QLabel" name="labelBPI">
            <property name="toolTip">
             <string>Beats per interval</string>
@@ -440,7 +428,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="2" column="0" alignment="Qt::AlignRight">
           <widget class="QLabel" name="labelAccent">
            <property name="text">
             <string>Accent</string>
@@ -469,17 +457,15 @@
         </layout>
        </widget>
       </item>
-      <item>
+      <item alignment="Qt::AlignRight|Qt::AlignVCenter">
        <widget class="IntervalProgressDisplay" name="intervalPanel" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>1</verstretch>
-         </sizepolicy>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>110</height>
+         </size>
         </property>
-        <property name="cursor">
-         <cursorShape>ArrowCursor</cursorShape>
-        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_2"/>
        </widget>
       </item>
      </layout>
@@ -491,7 +477,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Preferred</enum>
+      <enum>QSizePolicy::MinimumExpanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -505,19 +491,20 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>IntervalProgressDisplay</class>
-   <extends>QWidget</extends>
-   <header>intervalProgress/IntervalProgressDisplay.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>AudioMeter</class>
    <extends>QWidget</extends>
    <header>PeakMeter.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>IntervalProgressDisplay</class>
+   <extends>QWidget</extends>
+   <header>intervalProgress/IntervalProgressDisplay.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <resources>
+  <include location="../../resources/jamtaba.qrc"/>
   <include location="../../resources/jamtaba.qrc"/>
  </resources>
  <connections/>
