--- a/src/resources/css/themes/Flat/MainWindow.css
+++ b/src/resources/css/themes/Flat/MainWindow.css
@@ -1,3 +1,9 @@
+#zoomInButton,
+#zoomOutButton
+{
+    background: rgba(0, 0, 0, 6);
+}
+
 #userNamePanel
 {
     background-color: rgb(250, 250, 250);
