--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -302,3 +302,13 @@ QTabWidget::pane
 {
     background-color: transparent;
 }
+
+
+AudioMeter
+{
+    /* changing Audio Peak meter custom CSS properties */
+    qproperty-rmsColor: yellow;
+    qproperty-peakStartColor: orange;
+    qproperty-peakEndColor: red;
+}
+
