--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -113,7 +113,7 @@ QMenu::item::enabled:selected
 AudioMeter
 {
     /* changing Audio Peak meter custom CSS properties */
-    qproperty-rmsColor: white;
+    qproperty-rmsColor: rgb(90, 90, 90);
     qproperty-peakStartColor: green;
     qproperty-peakEndColor: red;
 }
