--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -293,3 +293,14 @@ QTabWidget::pane
 {
     background-color: transparent;
 }
+
+
+
+AudioMeter
+{
+    /* changing Audio Peak meter custom CSS properties */
+    qproperty-rmsColor: rgb(40, 90, 130);
+    qproperty-peakStartColor: rgb(40, 90, 160);
+    qproperty-peakEndColor: red;
+    qproperty-maxPeakColor: rgb(0, 30, 180);
+}
