Allowing midi controlled audio tracks (like vocoders)
- Adding a checkbox in midi tools dialog to de/activate midi input routing.
- Implementing midi routing in LocalInputNode
- Implementing visual feedback in local tracks to show when midi routing is activated.

--- a/src/Standalone/gui/MidiToolsDialog.ui
+++ b/src/Standalone/gui/MidiToolsDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>237</width>
-    <height>208</height>
+    <height>257</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -200,6 +200,13 @@
        </layout>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBoxMidiRouting">
+     <property name="text">
+      <string>Route MIDI input to first subchannel</string>
+     </property>
     </widget>
    </item>
   </layout>
