Disabling track buttons when MIDI routing is enabled
 - disabling track buttons
 - changing CSS to reflect disabled buttons state.

--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -31,7 +31,7 @@ QPushButton:checked
     color: rgb(0,0,0);
 }
 
-QPushButton[enabled="false"]        /* disabled buttons */
+QPushButton:disabled
 {
     background: none;
     color: rgba(0, 0, 0, 30);
