--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -22,6 +22,13 @@
     color: rgb(50,50,50);
 }
 
+#soloButton:disabled,
+#muteButton:disabled
+{
+    color: rgba(0, 0, 0, 30);
+    border-color: rgba(0, 0, 0, 40);
+}
+
 /* button stereo inversion */
 QPushButton#buttonStereoInversion
 {
