--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -31,7 +31,7 @@ QPushButton:hover:checked
     border: 1px outset rgb(10, 10, 10);
 }
 
-QPushButton[enabled="false"]
+QPushButton:disabled
 {
     background-color: rgba(0, 0, 0, 40);
     color: rgba(0, 0, 0, 100);
@@ -248,6 +248,13 @@ QTabBar::tab:selected
     background-color: rgb(20, 20, 20);
 }
 
+QTabBar::tab:hover,
+QTabBar::tab:hover:checked
+{
+    color: rgb(140, 140,140);
+    background-color: rgb(30, 30, 30);
+}
+
 QTabBar::tab:!selected
 {
     margin-top: 3px; /* make non-selected tabs look smaller */
@@ -257,7 +264,7 @@ QTabBar::tab:!selected
 
 QTabBar::tab:!selected:hover
 {
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(20, 20, 20);
 }
 
 QMenuBar::item
@@ -307,13 +314,4 @@ QMenu::item::enabled:selected
 QTabWidget::pane
 {
     background-color: transparent;
-}
-
-
-
-AudioMeter
-{
-    /* changing Audio Peak meter custom CSS properties */
-    qproperty-rmsColor: rgb(110, 110, 110);
-    qproperty-maxPeakColor: rgb(110, 110, 110);
 }
