Allowing midi controlled audio tracks (like vocoders) (#682)
* Allowing midi controlled audio tracks (like vocoders)

- Adding a checkbox in midi tools dialog to de/activate midi input routing.
- Implementing midi routing in LocalInputNode
- Implementing visual feedback in local tracks to show when midi routing is activated.

* Disabling track buttons when MIDI routing is enabled

 - disabling track buttons
 - changing CSS to reflect disabled buttons state.

* Improving midi routing arrow painting

* Allowing midi routing arrow color in CSS theme files

* Showing midi routing check box only in second subchannel

* Saving/Remembering midi routing flag

* Drawing midi route arrow in local tracks (visual feedback)

* Restoring midi routing when loading presets

* Disabling track controls when midi routing is enabled

* Disabling midi rendering in 2nd subchannel when routing midi to 1st subchannel

* Disabling midi routing when audio or no_input is selected in 2nd subchannel

* Fixing midi activity meter when routing midi

* Drawing segmented midi activity meter

* Zero audio meters when midi routing is activated

* Undoing not intentional changes in black theme

* Reseting midi routing when 'reset track controls' is clicked

--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -31,7 +31,7 @@ QPushButton:hover:checked
     border: 1px outset rgb(10, 10, 10);
 }
 
-QPushButton[enabled="false"]
+QPushButton:disabled
 {
     background-color: rgba(0, 0, 0, 40);
     color: rgba(0, 0, 0, 100);
