--- a/src/resources/css/themes/Black_nm/BaseTrack.css
+++ b/src/resources/css/themes/Black_nm/BaseTrack.css
@@ -34,6 +34,13 @@
    border-radius: 1px;
 }
 
+#buttonBoostMinus12:disabled,
+#buttonBoostPlus12:disabled,
+#buttonBoostZero:disabled
+{
+    color: rgba(0, 0, 0, 100);
+}
+
 #buttonBoostMinus12:checked,
 #buttonBoostPlus12:checked,
 #buttonBoostZero:checked
@@ -180,7 +187,9 @@ BaseTrackView
 /* Setting colors when the track is 'not transmiting'
 -----------------------------------------------------*/
 BaseTrackView[unlighted="true"] #panSlider::handle,         /* pan slider handle */
-BaseTrackView[unlighted="true"] QSlider::handle:vertical    /* track fader handle */
+BaseTrackView[unlighted="true"] QSlider::handle:vertical,    /* track fader handle */
+#panSlider::handle:disabled,
+QSlider::handle:vertical:disabled
 {
     border: rgb(140, 140, 140);
     background: rgb(80, 80, 80);
