fix for common and flat styles

--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -237,4 +237,5 @@ AudioMeter
     qproperty-rmsColor: rgb(120, 120, 120);
     qproperty-peakStartColor: rgb(0, 180, 0);
     qproperty-peakEndColor: rgb(255, 50, 50);
+    qproperty-maxPeakColor: rgb(180, 180, 180);
 }
