--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -116,4 +116,5 @@ AudioMeter
     qproperty-rmsColor: rgb(90, 90, 90);
     qproperty-peakStartColor: green;
     qproperty-peakEndColor: red;
+    qproperty-maxPeakColor: rgb(90, 90, 90);
 }
