--- a/src/Common/gui/chat/ChatPanel.ui
+++ b/src/Common/gui/chat/ChatPanel.ui
@@ -26,16 +26,55 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <item row="1" column="0" colspan="4">
+   <item row="1" column="0">
+    <widget class="QLineEdit" name="chatText">
+     <property name="accessibleDescription">
+      <string>Type your text to sent on the chat here</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="buttonAutoTranslate">
+     <property name="toolTip">
+      <string>Auto translate</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Turn on/off the auto translation for chat messages</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="buttonClear">
+     <property name="toolTip">
+      <string>clear the messages ...</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Press that button to clear your message</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
     <widget class="QScrollArea" name="chatScroll">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
      </property>
      <property name="accessibleDescription">
       <string>This is the chat scroll area</string>
@@ -65,45 +104,6 @@
        </sizepolicy>
       </property>
      </widget>
-    </widget>
-   </item>
-   <item row="3" column="3">
-    <widget class="QPushButton" name="buttonClear">
-     <property name="toolTip">
-      <string>clear the messages ...</string>
-     </property>
-     <property name="accessibleDescription">
-      <string>Press that button to clear your message</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="buttonAutoTranslate">
-     <property name="toolTip">
-      <string>Auto translate</string>
-     </property>
-     <property name="accessibleDescription">
-      <string>Turn on/off the auto translation for chat messages</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QLineEdit" name="chatText">
-     <property name="accessibleDescription">
-      <string>Type your text to sent on the chat here</string>
-     </property>
     </widget>
    </item>
   </layout>
