fixing local channel name bkgr color

--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -179,6 +179,7 @@ QLineEdit#groupNameField:focus, #userNameLineEdit:focus
     color: rgb(200, 200, 200);
     selection-background-color: rgb(120, 120, 120);
     selection-color: rgb(40, 40, 40);
+    background-color: transparent;
 }
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
