--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -172,6 +172,7 @@ QLineEdit:focus
 
 QLineEdit#groupNameField:focus
 {
+    border-color: rgba(90, 90, 90, 40);
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 rgb(244, 178, 74),
         stop: 0.5 rgb(250, 208, 110));
