--- a/src/resources/css/themes/Flat/Dialogs.css
+++ b/src/resources/css/themes/Flat/Dialogs.css
@@ -25,7 +25,7 @@ PrivateServerDialog #comboBoxServers
 PrivateServerDialog #comboBoxServers:focus
 {
     color: black;
-    border:1px solid gray;
+    border: 1px solid rgba(90, 90, 90, 90);
 }
 
 BusyDialog
