fix all themes -topLevel suffix

--- a/src/resources/css/themes/Black_nm/Chat.css
+++ b/src/resources/css/themes/Black_nm/Chat.css
@@ -16,7 +16,10 @@ ChatPanel #chatText
 ChatPanel #chatText:focus                   /* text input field focused */
 {
     color: black;
+    border-color: rgba(0, 0, 0, 160);
+    background-color: rgb(180, 180, 180);
 }
+
 
 
 /* ChatMessagePanel is the widget used to show ONE chat message
