--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -127,11 +127,21 @@ QLineEdit
 QLineEdit:focus,
 QLineEdit#groupNameField:focus
 {
-    border-color: rgba(90, 90, 90, 40);
+    border-color: rgba(0, 0, 0, 90);
     background-color: white;
     color: black;
 }
 
+QLineEdit#groupNameField-topLevel,
+#userNameLineEdit-topLevel
+{
+    background-color: white;
+}
+
+QLineEdit#chatText-topLevel
+{
+    background-color: white;
+}
 
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
