--- a/src/resources/css/themes/Ice/NinjamWindow.css
+++ b/src/resources/css/themes/Ice/NinjamWindow.css
@@ -245,6 +245,16 @@ NinjamPanel QComboBox QAbstractItemView
     selection-color: white;
 }
 
+#comboBpi-topLevel
+{
+        background-color: rgb(117, 154, 174);
+}
+
+#comboBpm-topLevel
+{
+        background-color: rgb(107, 147, 178);
+}
+
 NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
 {
     border: 1px solid rgb(130, 130, 130);
