--- a/src/resources/css/themes/Volcano_nm/Chat.css
+++ b/src/resources/css/themes/Volcano_nm/Chat.css
@@ -13,6 +13,12 @@ ChatPanel #chatText
     background-color: rgba(255, 255, 255, 130);
 }
 
+ChatPanel #chatText:focus                   /* text input field focused */
+{
+    border-color: rgba(0, 0, 0, 160);
+}
+
+
 
 /* ChatMessagePanel is the widget used to show ONE chat message
 ----------------------------------------------------------------*/
