--- a/src/resources/css/themes/Flat/Dialogs.css
+++ b/src/resources/css/themes/Flat/Dialogs.css
@@ -20,13 +20,12 @@ PluginScanDialog #labelPluginText
 PrivateServerDialog #comboBoxServers
 {
     color: rgb(80, 80, 80);
-    border: 1px solid rgba(0, 0, 0, 90);
 }
 
 PrivateServerDialog #comboBoxServers:focus
 {
     color: black;
-    border: 1px solid rgba(90, 90, 90, 40);
+    border:1px solid gray;
 }
 
 BusyDialog
