delete borders from panelcombos qlineEdit

--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -258,12 +258,14 @@ IntervalProgressWindow
 
 #comboBpi-topLevel
 {
-        background-color: rgb(34, 34, 34);
+    background-color: rgb(34, 34, 34);
+    border: none;
 }
 
 #comboBpm-topLevel
 {
-        background-color: rgb(29, 29, 29);
+    background-color: rgb(29, 29, 29);
+    border: none;
 }
 
 NinjamPanel #intervalPanel,
