--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -251,7 +251,8 @@ NinjamPanel QComboBox               /* bpi, bpm, accents and shape comboboxes */
 
 #comboBpi-topLevel
 {
-        background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1,
+    border: none;
+    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1,
         stop:0 rgb(192, 192, 192),
         stop:1 rgb(158, 158, 158));
 }
