--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -204,7 +204,8 @@ selection-color: rgb(254, 181, 102);
 #comboBpi-topLevel,
 #comboBpm-topLevel
 {
-        background-color: rgb(184, 149, 124);
+    border: none;
+    background-color: rgb(184, 149, 124);
 }
 
 NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
