--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -177,6 +177,11 @@ QLineEdit#groupNameField-topLevel,
     background-color: rgb(197, 197, 197);
 }
 
+#userNameLineEdit-topLevel
+{
+    border: none;
+}
+
 QLineEdit#chatText-topLevel
 {
     background-color: rgb(197, 197, 197);
