new QlineEdit differentiation for chatText

--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -169,7 +169,7 @@ QLineEdit
 QLineEdit:focus
 {
     background-color: rgb(80, 80, 80);
-    color: rgb(180, 180, 180);
+    color: black;
     selection-background-color: rgb(50, 50, 50);
     selection-color: rgb(140, 140, 140);
 }
@@ -202,7 +202,10 @@ QLineEdit#chatText-topLevel
 
 QLineEdit#chatText-topLevel
 {
-    background-color: rgb(180, 180, 180);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 rgb(20, 20, 20),
+        stop: 0.5 rgb(180, 180, 180),
+        stop: 1.0 rgb(20, 20, 20));
 }
 
 
