--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -161,7 +161,10 @@ QLineEdit#groupNameField-topLevel
 
 QLineEdit#chatText-topLevel
 {
-    background-color: rgb(180, 207, 250);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop: 0.0 rgb(110, 165, 245),
+    stop: 0.5 rgb(180, 207, 250),
+    stop: 1.0 rgb(110, 165, 245));
     border-color: rgba(0, 0, 0, 160);
 }
 
