--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -169,7 +169,12 @@ NinjamPanel QComboBox
 #comboBpm-topLevel
 {
     border: none;
-    background-color: rgb(182, 182, 182);
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(182, 182, 182),
+        stop: 0.1 rgb(224, 224, 224),
+        stop: 0.45 rgb(224, 224, 224),
+        stop: 0.6 rgb(182, 182, 182),
+        stop: 1.0 rgb(182, 182, 182));
 }
 
 
